Terraform/modulos/SecurityGroup/resources.tf
provider "aws" {
  access_key = "${var.access_key}"
  secret_key = "${var.secret_key}"
  region     = "${var.region}"
}

resource "aws_security_group" "andrelab_22" {
  name = "andrelab_22"
  vpc_id = "${var.vpc_id}"

  # Acesso SSH do VPC.
  ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Desenvolvimento = "${var.desenvolvimento}"
  }
}

resource "aws_security_group" "andrelab_80" {
  name = "andrelab_80"
  vpc_id = "${var.vpc_id}"

  ingress {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Desenvolvimento = "${var.desenvolvimento}"
  }
}
